# rinha-backend-python

./: README.md  docker-compose.yml  nginx.conf  pyproject.toml
app/: Dockerfile  crud.py  db.py  main.py  models.py  requirements.txt  routers.py  schemas.py
